WIP on titles, descriptions and external lookup